--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,6 +7,10 @@
 
   <ion-content>
     <ion-list>
+      <button color="primary-pale" menuClose ion-item (click)="openLogin()">
+      <ion-icon name ="log-in" item-left></ion-icon>
+       Login 
+      </button>
       <button color="primary-pale" menuClose ion-item 
       *ngFor="let p of pages" (click)="openPage(p)">
   <ion-icon [name]="p.icon" item-left></ion-icon>
